<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/btnMains">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/plch_nombre"
            android:textColorHint="@color/colorWhite"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorWhite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/str_nombreMascota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/str_breed"
            android:textColorHint="@color/colorWhite"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorWhite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/str_raza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/str_age"
            android:textColorHint="@color/colorWhite"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorWhite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/str_eddad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/str_observations"
            android:textColorHint="@color/colorWhite"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/colorWhite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/str_observaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spinner_tamaño"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/colorWhite"
            android:popupBackground="@color/colorWhite"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_crearMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/mainOscuro"
            android:text="@string/btn_create"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
